--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(2D_Engine LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-add_compile_options(-Wall -pedantic --max-errors=1)
+add_compile_options(-Wall -pedantic -Wno-narrowing --max-errors=1)
 link_libraries(soloud stdc++exp windowscodecs dinput8 dxguid d2d1 winmm kernel32 user32 gdi32)
 add_compile_definitions(UNICODE)
 add_link_options(-municode)
